# rust-nc

./: .gitignore  Cargo.toml  build.sh  package.sh  readme.md
.cargo/: config.toml
.github/workflows/: cloudflare.yml  release.yml
assets/: countries.json  loading.html  singbox_1.11.9.json  singbox_1.12.12.json  startup_windows.xml  wix.wxs
crates/binary-ui/: Cargo.toml  build.rs
crates/binary-ui/src/: icon.rs  init.rs  ipc.rs  main.rs  single.rs  tray.rs  uiview.rs  view.rs  window.rs
crates/binary-ui/src/uiview/: webview.rs
crates/binary-ui/src/view/: webview.rs
crates/binary-ui/src/window/: main.rs  view.rs  view_webview.rs
crates/binary-web/: Cargo.toml
crates/binary-web/src/: main.rs
crates/binary-works-cloudflare/: .gitignore  Cargo.toml  package-lock.json  package.json  wrangler.dev.sh  wrangler.toml
crates/binary-works-cloudflare/src/: convert.rs  core.rs  git.rs  lib.rs  share.rs
crates/library-core/: Cargo.toml
crates/library-core/src/: app.rs  app_config.rs  boolean.rs  core.rs  file.rs  json.rs  lib.rs  logger.rs  redirect.rs  snowflake.rs  sqlite.rs  system.rs  timer.rs  yml.rs
crates/library-core/src/sqlite/: v202507180.rs
crates/library-core/src/system/: charset.rs  process.rs
crates/library-nc/: Cargo.toml
crates/library-nc/src/: area.rs  clash.rs  core.rs  data_size.rs  http.rs  kernel.rs  lib.rs  rule.rs  singbox.rs  subscribe.rs  subscribe_yml.rs
crates/library-sing-box/: Cargo.toml  Makefile  build.rs  core.go  go.mod  go.sum  main.go
crates/library-sing-box/cmd/: main.go
crates/library-sing-box/lib/: main.go
crates/library-sing-box/src/: _bin.rs  _box.rs  _lib.rs  lib.rs
crates/library-web/: Cargo.toml
crates/library-web/src/: http.rs  kernel.rs  lib.rs  route_config.rs  route_global.rs  route_kernel.rs  route_rule.rs  route_setting.rs  route_subscribe.rs  settings.rs  singbox.rs  startup.rs  tbl_config.rs  tbl_rule.rs  tbl_setting.rs  tbl_subscribe.rs  timer.rs  updater.rs  webserver.rs
crates/library-web/src/kernel/: sing_box.rs
crates/library-web/src/startup/: windows.rs
scripts/: build.sh  cloudflare.sh  package.sh
src/: app.rs  core.rs  init.rs  logging.rs  main.rs  webview.rs  window.rs
