[package]
name = "rust-nc"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[profile.release]
# 编译优化 平衡编译速度和性能优化
lto = "thin"
# 最高优化级别
opt-level = 3
# 减少代码生成单元，提高优化效果
codegen-units = 1

[dependencies]
once_cell = "1.21"
# tauri 用户基础组件
wry = "0.52"
tao = "0.34"
# 日志
log = "0.4"
simple_logger = "5.0"
time = "0.3"
# 自定义异常
thiserror = "2.0"