[workspace]
members = [
    "crates/library-core",
    "crates/library-nc",
    "crates/library-web",
    "crates/binary-ui",
    "crates/binary-web",
    "crates/binary-works-cloudflare",
    "crates/library-sing-box",
]
resolver = "2"

[workspace.package]
version = "25.7.183"
edition = "2024"
rust-version = "1.88.0"
authors = ["lingting"]
homepage = "https://github.com/lingting"
repository = "https://github.com/lingting-projects/lingting-nc"
categories = ["network"]
license = "Apache-2.0"
description = "lingting network control"

[workspace.dependencies]
# 日志
log = "0.4"
simple_logger = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"
thiserror = "2.0"
lazy_static = "1.5"
zstd = "0.13"
# tauri 基础组件
wry = "0.52"
tao = "0.34"
tray-icon = "0.21"
# web
axum = "0.8"
tokio = "1.44"
tower-http = "0.6"
reqwest = "0.12"
tower = "0.5"
# 基础
bytesize = "2.0"
humantime = "2.2"
indexmap = "2.10"
sqlite = "0.37"
futures = "0.3"
rust-single = "25.8"
sha2 = "0.10"
hex = "0.4.3"
# 序列化
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
base64 = "0.22"
regex = "1.11"
form_urlencoded = "1.1"
url = "2.5"
percent-encoding = "2.1"
byte-unit = "5.1"
encoding = "0.2"
# cloud flare worker
worker = "0.6"
# lib
libloading = "0.8"
libc = "0.2"
bindgen = "0.72"
winapi = "0.3"
windows = "0.61"
# build
winres = "0.1"

[profile.release]
# 编译优化 平衡编译速度和性能优化
lto = "thin"
# 最高优化级别
opt-level = 3
# 减少代码生成单元，提高优化效果
codegen-units = 1
debug = false
debug-assertions = false
