[package]
name = "binary-ui"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[[bin]]
name = "lingting-nc"
path = "src/main.rs"

[features]
default = ["dev"]
dev = ["library-core/dev"]
uat = ["library-core/uat", "local-ui", ]
prod = ["library-core/prod", "local-ui"]

trace = ["library-web/trace", "library-core/trace"]
local-ui = []

[dependencies]
library-core = { path = "../library-core" }
library-web = { path = "../library-web" }
log = { workspace = true }
# tauri 基础组件
wry = { workspace = true, features = [] }
tao = { workspace = true }
tray-icon = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(windows)'.build-dependencies]
winres = { workspace = true }
