[package]
name = "binary-ui"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[[bin]]
name = "lingting-nc"
path = "src/main.rs"

[features]
default = ["dev"]
dev = ["library-core/dev", "library-core/redirect"]
uat = ["library-core/uat", "local-ui", "library-core/redirect"]
prod = ["library-core/prod", "local-ui", "library-core/redirect"]

trace = ["library-web/trace", "library-core/trace", "wry/tracing"]
local-ui = []

[dependencies]
library-core = { path = "../library-core" }
library-web = { path = "../library-web" }
log = { workspace = true }
# tauri 基础组件
wry = { workspace = true, features = [] }
tao = { workspace = true, features = [] }
tray-icon = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
fs2 = "0.4"
interprocess = { version = "2.2" }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = { workspace = true }

