[package]
name = "binary-web"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
log = { workspace = true }
tokio = { workspace = true, features = [] }
library-web = { path = "../library-web" }
library-core = { path = "../library-core" }
