[package]
name = "binary-works-cloudflare"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "cloudflare works"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
log = ["library-nc/wrangler"]

[dependencies]
library-core = { path = "../library-core", features = [] }
library-nc = { path = "../library-nc" }
worker = { workspace = true, features = [] }
console_error_panic_hook = { version = "0.1.7" }
