[package]
name = "library-core"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
debug = []
timer = ["tokio/sync", "tokio/time", "tokio/rt", "tokio/macros"]
app = []
file = []
json = []
sqlite = []
full = ["timer", "app", "file", "sqlite", "json"]

[dependencies]
log = { workspace = true, features = [] }
thiserror = { workspace = true }
simple_logger = { workspace = true, features = [] }
futures = { workspace = true }
tokio = { workspace = true, features = [] }
time = { workspace = true }
sqlite = { workspace = true }
serde_json = { workspace = true }
