[package]
name = "library-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
debug = []
trace = []
timer = ["tokio", "time", "futures"]
app = ["time", "db", "simple_logger"]
file = []
json = ["serde_json"]
db = ['sqlite']
full = ["timer", "app", "file", "db", "json"]

[dependencies]
log = { workspace = true, features = [] }
thiserror = { workspace = true }
simple_logger = { workspace = true, features = [], optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"], optional = true }
time = { workspace = true, optional = true }
sqlite = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
