[package]
name = "library-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
dev = ["debug"]
uat = ["debug"]
prod = []

debug = []
trace = []

data_size = ["byte-unit", "regex"]
system = ["encoding", "winapi/winnls"]
redirect = ["libc", "winapi/processenv", "winapi/winbase", "winapi/handleapi", "winapi/winnt"]
log = ["simple_logger"]
file = []
json = ["serde_json"]
db = ['sqlite']
timer = ["tokio", "time", "futures"]
app = ["time", "db", "log"]
full = ["timer", "app", "file", "db", "json", "system", "data_size"]

[dependencies]
log = { workspace = true, features = [] }
thiserror = { workspace = true }
simple_logger = { workspace = true, features = [], optional = true }
tracing = { workspace = true, features = [], optional = true }
tracing-subscriber = { workspace = true, features = [], optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"], optional = true }
time = { workspace = true, optional = true }
sqlite = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
encoding = { workspace = true, optional = true }
byte-unit = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { workspace = true, optional = true, features = [] }

[target.'cfg(not(target_os="windows"))'.dependencies]
libc = { workspace = true, optional = true }
