[package]
name = "library-nc"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
default = []
log = []
wrangler = ["log"]
binary = ["log"]

[dependencies]
library-core = { path = "../library-core", features = [] }
log = { workspace = true }
thiserror = { workspace = true }
byte-unit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }
serde_yaml = { workspace = true, features = [] }
percent-encoding = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
time = { workspace = true, features = ["macros", "parsing"] }
worker = { workspace = true }
indexmap = { workspace = true ,features = ["serde"]}
