[package]
name = "library-sing-box"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default=["lib"]
lib = ["libloading"]
bin = []

[dependencies]
library-core = { path = "../library-core", features = ["system"] }
log = { workspace = true }
libloading = { workspace = true, optional = true }