[package]
name = "library-web"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
library-nc = { path = "../library-nc" }
library-core = { path = "../library-core" }
log = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true }