[package]
name = "library-web"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
trace = ["library-core/trace", "tower-http/trace"]

[dependencies]
library-nc = { path = "../library-nc", features = ["binary"] }
library-core = { path = "../library-core", features = ["full"] }
library-sing-box = { path = "../library-sing-box", features = [] }
log = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["cors", "timeout"] }
serde = { workspace = true, features = ["derive"] }
sqlite = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "native-tls"] }
serde_json = { workspace = true }